deployment/kubernetes/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-test-app
spec:
  template:
    spec:
      containers:
      - name: aspnet-test-app
