deployment/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnet-test-app
spec:
  tls:
  - hosts:
    - "*.yamac.site"
    secretName: yamac-site-tls
  rules:
  - host: www-test.yamac.site
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: aspnet-test-app
              port:
                number: 9590
